derive-ex-tests/tests/compile_fail/compare_op/eq_key_not_impl_eq.rs
use derive_ex::derive_ex;

#[derive_ex(Eq, PartialEq)]
struct X {
    #[eq(key = $.0)]
    x: (f64, f64),
}

fn main() {}
